<resources>
    <string name="app_name">RPG</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="direction_controls">Direction controls</string>
    <string name="image_interact_control">Interact / Use</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_inventory_control">Open inventory</string>
    <string name="button_items">Items</string>
    <string name="button_stats">Stats</string>
    <string name="button_crafting">Craft</string>
    <string name="button_drop">Drop</string>
    <string name="button_info">Info</string>
    <string name="button_equip">Equip</string>
    <string name="health">Health:</string>
    <string name="armor">Armor:</string>
    <string name="damage">Damage:</string>
    <string name="speed">Speed:</string>
    <string name="equipment">Equipment</string>
    <string name="inventory">Inventory</string>
    <string name="button_use">Use</string>
    <string name="button_unequip">Unequip</string>
</resources>
