<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >

    <ImageView
        android:id="@+id/image_icon"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/image_icon"
        android:layout_alignEnd="@+id/button_equip"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_name"
        android:layout_toEndOf="@id/image_icon"
        android:layout_alignBottom="@id/image_icon"
        android:layout_alignEnd="@+id/button_equip"
        android:layout_margin="8dp"
        >

        <TextView
            android:id="@+id/text_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </ScrollView>

    <Button
        android:id="@+id/button_drop"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@id/image_icon"
        android:text="@string/button_drop"
        android:textAllCaps="true"
        android:layout_alignParentBottom="true"
        />

    <Button
        android:id="@+id/button_info"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@id/image_icon"
        android:layout_toEndOf="@id/button_drop"
        android:text="@string/button_info"
        android:textAllCaps="true"
        android:layout_alignParentBottom="true"
        />

    <Button
        android:id="@+id/button_equip"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@id/image_icon"
        android:layout_toEndOf="@id/button_info"
        android:text="@string/button_equip"
        android:textAllCaps="true"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>