<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <android.opengl.GLSurfaceView
        android:id="@+id/gl_surface_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0px"
        android:padding="0px"
        />

    <ImageView
        android:id="@+id/image_direction_controls"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:src="@drawable/direction_controls"
        android:scaleType="fitCenter"
        android:contentDescription="@string/direction_controls"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="40dp"
        />

    <ImageView
        android:id="@+id/image_interact_control"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/interact_control"
        android:scaleType="fitCenter"
        android:contentDescription="@string/image_interact_control"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="40dp"
        />

    <LinearLayout
        android:id="@+id/layout_health"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ProgressBar
            style="@style/ProgressBarHealth"
            android:id="@+id/progress_bar_health"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_margin="16dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:visibility="gone"
        >

        <include
            layout="@layout/cell_inventory"
            android:id="@+id/cell_quick_slot_1"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_margin="2dp"
            />

        <include
            layout="@layout/cell_inventory"
            android:id="@+id/cell_quick_slot_2"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_margin="2dp"
            />

        <include
            layout="@layout/cell_inventory"
            android:id="@+id/cell_quick_slot_3"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_margin="2dp"
            />

    </LinearLayout>

    <ImageView
        android:id="@+id/image_inventory_control"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:src="@drawable/i_chest01"
        android:scaleType="fitCenter"
        android:contentDescription="@string/image_inventory_control"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:padding="8dp"
        />

    <FrameLayout
        android:id="@+id/frame_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        />

</RelativeLayout>